updated colors again, added talks.md

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,8 @@
 
 
 // Colors
-$red-color:           #FF3636 !default;
+// $red-color:           #FF3636 !default;
+$red-color:           #861F41 !default; // brooklyn college maroon
 $red-color-dark:      #B71C1C !default;
 // $orange-color:        #F29105 !default;
 $orange-color:        #E87722 !default; // princeton orange
