--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,6 +10,7 @@ $red-color:           #861F41 !default; // brooklyn college maroon
 $red-color-dark:      #B71C1C !default;
 // $orange-color:        #F29105 !default;
 $orange-color:        #E87722 !default; // princeton orange
+$pink-darkmode-color: #ED6E6E !default;
 $blue-color:          #0076df !default;
 $blue-color-dark:     #00369f !default;
 $cyan-color:          #2698BA !default;
