--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,6 +61,8 @@
                 </a>
               </li>
               {%- endif %}
+              <!-- manual link to cv --> 
+        <li class="nav-item"><a class="nav-link" href=/assets/pdf/cv.pdf">CV</a></li>
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
