removed empty years, added video button

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -185,6 +185,8 @@
           {%- if entry.website %}
             <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
           {%- endif %}
+           {%- if entry.video %}
+           <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
           </div>
           {% if site.badges %}
           <div class="badges">
