corrected typo in video code

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -187,6 +187,7 @@
           {%- endif %}
            {%- if entry.video %}
            <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
+           {%- endif -%}
           </div>
           {% if site.badges %}
           <div class="badges">
