--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,7 +62,7 @@
               </li>
               {%- endif %}
               <!-- manual link to cv --> 
-        <li class="nav-item"><a class="nav-link" href="/assets/pdf/cv.pdf">CV</a></li>
+        <li class="nav-item"><a class="nav-link" href="/assets/pdf/cv.pdf">cv</a></li>
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
