--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,6 +9,12 @@
   {% include head.html %}
   </head>
 
+      <header class="post-header">
+            <h1 class="post-title">{{ page.title }}</h1>
+            <p class="post-description">{{ page.description }}</p>
+          </header>
+
+
   <!-- Body -->
   <body class="{% if site.navbar_fixed %}fixed-top-nav{% endif %} {% unless site.footer_fixed %}sticky-bottom-footer{% endunless %}">
 
