--- a/_layouts/noheader.html
+++ b/_layouts/noheader.html
@@ -43,8 +43,8 @@
       {% endif %}
     </div>
 
-    <!-- Footer -->
-    {%- include footer.html %}
+    <!-- Footer  (disabled for now) -->
+    <!-- {%- include footer.html %} -->
 
     <!-- JavaScripts -->
     {% include scripts/jquery.html %}
