--- a/_layouts/noheaderpage.html
+++ b/_layouts/noheaderpage.html
@@ -2,12 +2,21 @@
 layout: noheader
 ---
 <!-- page.html -->
-        <div class="post">
+        <!-- <div class="post"> -->
+        <!--  -->
+        <!--   <header class="post-header"> -->
+        <!--     <h1 class="post-title">{{ page.title }}</h1> -->
+        <!--     <p class="post-description">{{ page.description }}</p> -->
+        <!--   </header> -->
 
-          <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
-            <p class="post-description">{{ page.description }}</p>
-          </header>
+        
+<div class="post">
+  <div class="header-bar">
+    <h1>{{ page.title}}</h1>
+  </div>
+  {% endif %}
+< div>
+<!-- above is stolen from blog fomatting... -->
 
           <article>
             {{ content }}
