changed width in grid-sizer to 50 from 250 to test

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -440,7 +440,8 @@ footer.sticky-bottom {
   }
 
   .grid-sizer, .grid-item {
-    width: 250px;
+    width: 50px;
+// default width was 250px
     margin-bottom: 10px;
   }
 
