--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -72,6 +72,7 @@ blockquote {
   .card-title {
     color: var(--global-text-color);
     font-size: 0.5rem
+// font-size line was not here by default
   }
 
   .card-item {
