--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -16,8 +16,11 @@
         {%- endif -%}
           <div class="card-body">
             <p class="card-text">{{ project.talkdate }}</p>
-            <h3 class="card-title">{{ project.title }}</h3>
-            <p class="card-text">{{ project.description }}</p>
+            <h3 class="card-title">{ project.title }}</h3>
+            <p class="card-text">Title: {{ project.description }}</p> 
+<!-- to avoid having to redefine too many things, "description" is really the title -->
+            <p class="card-text">Abstract: {{ project.abstract }}</p>
+            <p class="card-text">Location: {{ project.location }}</p>
             <div class="row ml-1 mr-1 p-0">
               {%- if project.github -%}
               <div class="github-icon">
