corrected typo in colloquium page

--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -16,7 +16,7 @@
         {%- endif -%}
           <div class="card-body">
             <p class="card-text">{{ project.talkdate }}</p>
-            <h3 class="card-title">{ project.title }}</h3>
+            <h3 class="card-title">{{ project.title }}</h3>
             <p class="card-text">Title: {{ project.description }}</p> 
 <!-- to avoid having to redefine too many things, "description" is really the title -->
             <p class="card-text">Abstract: {{ project.abstract }}</p>
