--- a/_includes/colloqheader.html
+++ b/_includes/colloqheader.html
@@ -6,9 +6,15 @@
         <div class="container">
           {% if page.permalink != '/' -%}
           <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
-            test header title
+           foo
           </a>
-                  <!-- Navbar Toggle -->
+          {%- elsif site.enable_navbar_social -%}
+          <!-- Social Icons -->
+          <div class="navbar-brand social">
+            {% include social.html %}
+          </div>
+          {% endif %}
+          <!-- Navbar Toggle -->
           <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar top-bar"></span>
@@ -18,6 +24,12 @@
 
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
+
+              {%- for page in site.pages -%}
+                {% if page.permalink == '/' %}
+                  {% assign about_title = page.title %}
+                {% endif %}
+              {% endfor %}
 
               <!-- About -->
               <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
@@ -37,6 +49,41 @@
                 </a>
               </li>
               {%- endif %}
+              <!-- manual link to cv --> 
+              <li class="nav-item"><a class="nav-link" href="/assets/pdf/cv.pdf">cv</a></li>
+
+              <!-- Other pages -->
+              {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
+              {%- for p in sorted_pages -%}
+              {%- if p.nav and p.autogen == nil -%}
+              {%- if p.dropdown %}
+              <li class="nav-item dropdown {% if page.title == p.title %}active{% endif %}">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ p.title }}
+                  {%- if page.title == p.title -%}
+                  <span class="sr-only">(current)</span>
+                  {%- endif -%}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                  {%- for child in p.children -%}
+                  {%- if child.title == 'divider' %}
+                  <div class="dropdown-divider"></div>
+                  {%- else %}
+                  <a class="dropdown-item" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
+                  {%- endif -%}
+                  {% endfor %}
+                </div>
+              </li>
+              {%- else %}
+              <li class="nav-item {% if page.title == p.title %}active{% endif %}">
+                <a class="nav-link" href="{{ p.url | relative_url }}">{{ p.title }}
+                  {%- if page.title == p.title -%}
+                  <span class="sr-only">(current)</span>
+                  {%- endif -%}
+                </a>
+              </li>
+              {%- endif -%}
+              {%- endif -%}
+              {% endfor -%}
               {%- if site.enable_darkmode %}
 
               <!-- Toogle theme mode -->
@@ -60,3 +107,4 @@
       </progress>
 {%- endif %}
     </header>
+
