--- a/_layouts/talkpage.html
+++ b/_layouts/talkpage.html
@@ -17,14 +17,13 @@ layout: colloqtemplate
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta"> post-meta </p>
-    <p class="post-meta"> post-meta </p>
-    <p class="post-tags"> post-tags </p>
+    <p class="post-meta"> Title: {{page.description}} </p>
+    <p class="post-meta"> Location: {{page.location}} at {{page.talktime}} </p>
   </header>
 
   <article class="post-content">
    <div id="markdown-content">
-      {{ content }}
+      Abstract: {{ page.abstract }}
     </div>
   </article>
 
