--- a/_includes/colloqheader.html
+++ b/_includes/colloqheader.html
@@ -5,7 +5,7 @@
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
         <div class="container">
           {% if page.permalink != '/' -%}
-          <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl/bcmc }}/">
+          <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/bcmc">
             BCMC
           </a>
           {%- elsif site.enable_navbar_social -%}
