changed bcmc title formatting

--- a/_layouts/colloqpage.html
+++ b/_layouts/colloqpage.html
@@ -12,9 +12,9 @@ layout: colloqtemplate
         
 <div class="post">
   <div class="header-bar">
-    <h1>{{ page.title}}</h1>
+    <h1 class="post-title">{{ page.title}}</h1>
   </div>
-<!-- above is stolen from blog fomatting... -->
+<!-- above is from page.html. may also want to steal from the blog format -->
 
     <article>
       {{ content }}
