--- a/_layouts/talkpage.html
+++ b/_layouts/talkpage.html
@@ -1,7 +1,8 @@
 ---
 layout: colloqtemplate
 ---
-<!-- _layouts/post.html -->
+<!-- _layouts/talkpage.html -->
+<!-- this formats the page that individual talks appear on -->
 {%- assign year = page.date | date: "%Y" -%}
 {%- assign tags = page.tags | join: "" -%}
 {%- assign categories = page.categories | join: "" -%}
