more formatting changes to main page

--- a/_layouts/colloqpage.html
+++ b/_layouts/colloqpage.html
@@ -12,7 +12,8 @@ layout: colloqtemplate
         
 <div class="post">
   <div class="header-bar">
-    <h1 class="post-title">{{ page.title}}</h1>
+    <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-description">{{ page.description }}</p>
   </div>
 <!-- above is from page.html. may also want to steal from the blog format -->
 
