tried to add an image to the talkpage layout

--- a/_layouts/talkpage.html
+++ b/_layouts/talkpage.html
@@ -26,6 +26,14 @@ layout: colloqtemplate
    <div id="markdown-content">
       Abstract: {{ page.abstract }}
     </div>
+    <div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/5.jpg" title="example image" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    This image can also have a caption. It's like magic.
+</div>
   </article>
 
 </div>
