--- a/_layouts/talkpage.html
+++ b/_layouts/talkpage.html
@@ -20,20 +20,18 @@ layout: colloqtemplate
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta"> Title: {{page.description}} </p>
     <p class="post-meta"> Location: {{page.location}} at {{page.talktime}} </p>
-  </header>
+  </header> 
+  <div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/elgindi.jpeg" title="Speaker image" class="img-fluid rounded z-depth-1" %}
+        <!--of course, need to make this modular... -->
+    </div>
+</div>
 
   <article class="post-content">
    <div id="markdown-content">
       Abstract: {{ page.abstract }}
     </div>
-    <div class="row">
-    <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/5.jpg" title="example image" class="img-fluid rounded z-depth-1" %}
-    </div>
-</div>
-<div class="caption">
-    This image can also have a caption. It's like magic.
-</div>
   </article>
 
 </div>
